# oxidizePdf

./: .claudeignore  .gitattributes  .gitignore  .plan  .tarpaulin.toml  API_DOCUMENTATION.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  COVERAGE_AUDIT.md  COVERAGE_BASELINE.md  COVERAGE_REPORT.md  Cargo.toml  EDITIONS.md  FEATURE_TIERS.md  FEATURE_VERIFICATION_REPORT.md  IMPLEMENTACION_OCR_API.md  ISO_32000_COMPLIANCE_REPORT.md  ISO_COMPLIANCE.md  ISO_COMPLIANCE_MATRIX.toml  ISO_COMPLIANCE_MATRIX_CURATED.toml  ISO_COMPLIANCE_REPORT.md  ISO_COMPLIANCE_UPDATE.md  ISO_VERIFICATION_STATUS.toml  LICENSE  MARKET_POSITION.md  MIGRATION.md  PERFORMANCE.md  PNG_DECODER_ISSUES.md  PRODUCT_STRATEGY.md  PROJECT_PROGRESS.md  README.md  REPOSITORY_ARCHITECTURE.md  ROADMAP.md  SECURITY.md  SECURITY_MEASURES.md  (+13 more)
benches/lopdf_comparison/: .gitignore  Cargo.toml  QUICKSTART.md  README.md  quick_benchmark.sh
benches/lopdf_comparison/src/: benchmark_compression.rs  benchmark_creation.rs  benchmark_parsing.rs  lopdf_realistic.rs  run_all.rs
dev-tools/iso-curator/: Cargo.toml  compliance_report.json  scan_results.json
dev-tools/iso-curator/src/: main.rs
dev-tools/pipeline-profiler/: Cargo.toml
dev-tools/pipeline-profiler/src/: main.rs
lints/: Cargo.toml  LINT_RESULTS.md  STATUS_REPORT.md  build.rs  rust-toolchain.toml
lints/src/: bool_option_pattern.rs  duration_primitives.rs  lib.rs  library_unwraps.rs  missing_context.rs  string_errors.rs
oxidize-pdf-core/: .gitignore  Cargo.toml  PROJECT_PROGRESS.md  coverage_report.txt  find_unwraps.py  find_unwraps_improved.py  show_unwraps.py  tarpaulin.toml
oxidize-pdf-core/benches/: batch_processing_benchmark.rs  encryption_benchmark.rs  font_metrics_lookup.rs  parsing_benchmark.rs  performance_benchmarks.rs  pipeline_benchmark.rs  pipeline_granular_benchmark.rs  plaintext_benchmark.rs
oxidize-pdf-core/benches.disabled/: ai_chunking.rs  batch_processing_benchmark.rs  image_extraction_benchmark.rs  marked_content_benchmark.rs  parsing_benchmark.rs
oxidize-pdf-core/examples/: README.md  advanced_features_demo.rs  advanced_table_extraction.rs  advanced_tables_adjusted_example.rs  advanced_tables_example.rs  advanced_tables_landscape_example.rs  ai_ready_contract.rs  ai_ready_invoice.rs  ai_ready_invoice_demo.rs  analysis_spi_custom_chunking.rs  analysis_spi_full_pipeline.rs  analyze_failing_stream.rs  analyze_subsetting_logic.rs  analyze_table.rs  batch_processing.rs  batch_processing_advanced.rs  blend_modes.rs  cff_subr_subsetting_demo.rs  charts_coordinate_problem.rs  charts_dashboard_integration_test.rs  charts_text_alignment_test.rs  choice_fields.rs  cjk_text_extraction.rs  classify_t2_corpus.rs  compare_font_widths.rs  compare_iso_matrices.rs  comprehensive_dashboard.rs  comprehensive_unicode_demo.rs  convert_pdf_ocr.rs  corpus_probe.rs  dashboard_example.rs  dashboard_sales_report.rs  dashboard_templates_demo.rs  debug_2_kpis_per_row.rs  debug_cid_mapping.rs  debug_content.rs  debug_coordinates.rs  debug_dashboard_positions.rs  debug_font_encoding.rs  debug_font_tables.rs  (+146 more)
oxidize-pdf-core/examples/doc/: COMPREHENSIVE_EXAMPLES.md  DASHBOARD_STATUS_REPORT.md  OCR_USAGE.md  SOLAPAMIENTO_SOLUCIONADO.md
oxidize-pdf-core/examples/docs/: PROJECT_PROGRESS.md
oxidize-pdf-core/examples/results/: CONFIDENTIAL_OCR_TEST_SUMMARY.md  OCR_TEST_RESULTS.md  ai_ready_contract_entities.jsonld  ai_ready_invoice_entities.jsonld  ai_ready_resume_entities.jsonld
oxidize-pdf-core/examples/sample_output/: rag_chunks_sample.jsonl
oxidize-pdf-core/examples/src/: debug_text_rendering.rs
oxidize-pdf-core/src/: compression.rs  coordinate_system.rs  document.rs  error.rs  geometry.rs  lib.rs  page.rs  page_forms.rs  page_lists.rs  page_tables.rs  page_transitions.rs  page_tree.rs  viewer_preferences.rs  writer.rs
oxidize-pdf-core/src/actions/: form_actions.rs  launch_action.rs  mod.rs
oxidize-pdf-core/src/advanced_tables/: cell_style.rs  error.rs  header_builder.rs  mod.rs  table_builder.rs  table_renderer.rs
oxidize-pdf-core/src/ai/: chunking.rs  formats.rs  mod.rs
oxidize-pdf-core/src/annotations/: annotation.rs  annotation_type.rs  geometric.rs  link.rs  markup.rs  mod.rs  polygon.rs  popup.rs
oxidize-pdf-core/src/batch/: job.rs  mod.rs  progress.rs  result.rs  worker.rs
oxidize-pdf-core/src/charts/: bar_chart.rs  (+6 more)
oxidize-pdf-core/test-pdfs/: check_content.py  verify_pdfs.py
oxidize-pdf-core/tests/: acroform_fields_serialize_test.rs  advanced_tables_tests.rs  analysis_spi_corpus_parity_test.rs  analysis_spi_test.rs  annotation_injector_test.rs  annotation_write_test.rs  annotations_error_handling_test.rs  annotations_integration_test.rs  annotations_tests.rs  architecture_simple_test.rs  batch_processing_advanced_test.rs  batch_processing_tests.rs  calculations_coverage_test.rs  calibrated_color_tests.rs  cff_desubroutinize_test.rs  cff_subsetter_test.rs  charts_tests.rs  choice_fields_tests.rs  chunk_page_mapper_test.rs  cid_cmap_test.rs  cjk_font_integration_test.rs  cli_ocr_tests.rs  cmap_utils_test.rs  content_coverage_test.rs  content_injection_test.rs  content_tokenizer_hang_test.rs  corpus_support.rs  custom_fonts_test.rs  dashboard_integration_test.rs  deprecation_parity_test.rs  deprecation_warning_test.rs  devicen_color_tests.rs  document_builder_tests.rs  draw_image_transparency_tests.rs  element_graph_integration_test.rs  element_graph_test.rs  element_relationships_advanced_test.rs  element_relationships_test.rs  element_types_test.rs  encoding_embedded_stream_test.rs  (+211 more)
oxidize-pdf-pro/: Cargo.toml  LICENSE  README.md
oxidize-pdf-pro/examples/: basic_pro_features.rs  pro_invoice_template.rs  semantic_extractor.rs  xmp_embedding.rs
oxidize-pdf-pro/src/: error.rs  lib.rs
tools/benchmarks/: Cargo.toml  README.md  benchmark_parser.py  benchmark_writer.py  measure_oxidize_performance.py  oxidize_quick_benchmark.json  parser_results.json  python_pdf_benchmark.py  python_pdf_benchmark_results.json  quick_oxidize_benchmark.py  writer_results.json
(+625 files in other folders)
