[package]
name = "oxidize-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/oxidize-pdf"
homepage = "https://github.com/bzsanti/oxidizePdf"
description = "A pure Rust PDF generation and manipulation library with zero external dependencies"
keywords = ["pdf", "document", "generation", "parser", "graphics"]
categories = ["graphics", "text-processing", "parsing", "multimedia::images"]
readme = "../README.md"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
lazy_static = { workspace = true }

# Compression (optional)
flate2 = { workspace = true, optional = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }

# Logging
tracing = { workspace = true }

# Hashing
md5 = "0.8"
sha2 = "0.10"

# Unicode processing
unicode-normalization = "0.1"

# Text processing and validation
regex = "1.10"

# Random number generation (for examples)
rand = { version = "0.8", optional = true }

# Flags
bitflags = "2.4"

# Parallel processing
num_cpus = "1.16"
rayon = { version = "1.8", optional = true }

# (regex dependency moved to text processing section above)

# TOML parsing for ISO compliance matrix
toml = "0.8"

# Temporary files for external validation
tempfile = "3.8"
rusty-tesseract = { version = "1.1.10", optional = true }
image = { workspace = true, features = ["png", "jpeg"], optional = true }

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "handleapi", "winnt"] }

# Image processing dependencies (optional)
image = { workspace = true, optional = true }

# OCR dependencies (optional)
rusty-tesseract = { version = "1.1.10", optional = true }
# tesseract = { version = "0.15.2", optional = true, features = ["tesseract_5_2"] }
# leptonica-plumbing = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.7"
tempfile = "3.8"
serde_json = { workspace = true }

[[example]]
name = "font_spacing_test"
path = "../examples/src/font_spacing_test.rs"

[[example]]
name = "font_subsetting_test"
path = "../examples/src/font_subsetting_test.rs"

[[example]]
name = "field_actions"
path = "../examples/src/field_actions.rs"

[[example]]
name = "form_validation"
path = "../examples/src/form_validation.rs"

[[example]]
name = "generate_jpeg_test_fixture"
path = "../examples/src/generate_jpeg_test_fixture.rs"

[[example]]
name = "button_fields_demo"
path = "../examples/src/button_fields_demo.rs"

[[example]]
name = "calibrated_colors_demo"
path = "../examples/src/calibrated_colors_demo.rs"

[[example]]
name = "generate_compliance_report"
path = "../examples/src/generate_compliance_report.rs"

[[example]]
name = "parse_iso_spec"
path = "../examples/src/parse_iso_spec.rs"

[[example]]
name = "expand_iso_matrix"
path = "../examples/src/expand_iso_matrix.rs"

[[example]]
name = "compare_iso_matrices"
path = "../examples/src/compare_iso_matrices.rs"

[[example]]
name = "test_corrupt_pdf_issue47"
path = "../examples/src/test_corrupt_pdf_issue47.rs"

[[example]]
name = "test_cjk_fonts_issue46"
path = "../examples/src/test_cjk_fonts_issue46.rs"

[[example]]
name = "demo_issues_fixed"
path = "../examples/src/demo_issues_fixed.rs"

[[example]]
name = "advanced_tables_example"
path = "../examples/advanced_tables_example.rs"

[[example]]
name = "advanced_tables_landscape_example"
path = "../examples/advanced_tables_landscape_example.rs"

[[example]]
name = "advanced_tables_adjusted_example"
path = "../examples/advanced_tables_adjusted_example.rs"

[[example]]
name = "advanced_tables_truncated_example"
path = "../examples/advanced_tables_truncated_example.rs"

[[example]]
name = "charts_example"
path = "../examples/charts_example.rs"

[[example]]
name = "charts_coordinate_problem"
path = "../examples/charts_coordinate_problem.rs"

[[example]]
name = "charts_fixed_example"
path = "../examples/charts_fixed_example.rs"

[[example]]
name = "charts_text_alignment_test"
path = "../examples/charts_text_alignment_test.rs"

[[example]]
name = "charts_comprehensive_test"
path = "../examples/charts_comprehensive_test.rs"

[[example]]
name = "performance_benchmark_1000"
path = "../examples/src/performance_benchmark_1000.rs"

[[example]]
name = "simple_document_benchmark"
path = "../examples/src/simple_document_benchmark.rs"

[[example]]
name = "test_row_alignment_fix"
path = "../examples/src/test_row_alignment_fix.rs"

[[example]]
name = "debug_flate_predictor"
path = "../examples/src/debug_flate_predictor.rs"

[[example]]
name = "analyze_decoded_stream"
path = "../examples/src/analyze_decoded_stream.rs"

[[example]]
name = "debug_xref_streams"
path = "../examples/src/debug_xref_streams.rs"

[[example]]
name = "analyze_failing_stream"
path = "../examples/src/analyze_failing_stream.rs"

[[example]]
name = "diagnose_xref_confusion"
path = "../examples/src/diagnose_xref_confusion.rs"

[[example]]
name = "debug_predictor_structure"
path = "../examples/src/debug_predictor_structure.rs"

[[example]]
name = "extract_page_14"
path = "../examples/src/extract_page_14.rs"

[[example]]
name = "extract_multiple_pages"
path = "../examples/src/extract_multiple_pages.rs"

# Temporarily disabled examples with compilation errors
# [[example]]
# name = "streaming_support"

# [[example]]
# name = "batch_processing"

# [[example]]
# name = "error_recovery"

# [[example]]
# name = "analyze_pdf_rendering"

# Temporarily disabled test file with compilation errors

[[example]]
name = "medium_complexity_benchmark"
path = "../examples/src/medium_complexity_benchmark.rs"

[[example]]
name = "high_complexity_benchmark"
path = "../examples/src/high_complexity_benchmark.rs"

[[example]]
name = "extreme_complexity_benchmark"
path = "../examples/src/extreme_complexity_benchmark.rs"

[[example]]
name = "tesseract_debug"
path = "../examples/src/tesseract_debug.rs"


[[example]]
name = "test_ocr_with_tesseract"
path = "../examples/src/test_ocr_with_tesseract.rs"
required-features = ["ocr-tesseract"]

[[example]]
name = "test_extract_text_issue47"
path = "../examples/src/test_extract_text_issue47.rs"

[[example]]
name = "test_parent_resources"
path = "../examples/src/test_parent_resources.rs"

[[example]]
name = "test_issue47_verification"
path = "../examples/src/test_issue47_verification.rs"

[[example]]
name = "debug_font_encoding"
path = "../examples/src/debug_font_encoding.rs"

[[example]]
name = "test_random_fixtures"
path = "../examples/src/test_random_fixtures.rs"

[[example]]
name = "test_random_fixtures_simple"
path = "../examples/src/test_random_fixtures_simple.rs"

[[example]]
name = "test_text_extraction_demo"
path = "../examples/src/test_text_extraction_demo.rs"

[[example]]
name = "test_random_fixtures_extraction"
path = "../examples/src/test_random_fixtures_extraction.rs"

[[example]]
name = "test_all_fixtures_extraction"
path = "../examples/src/test_all_fixtures_extraction.rs"

[[example]]
name = "test_error_fixes"
path = "../examples/src/test_error_fixes.rs"
required-features = ["rand"]

[[example]]
name = "transparency"
path = "../examples/src/transparency.rs"

[[example]]
name = "debug_transparency"
path = "../examples/src/debug_transparency.rs"

[[bench]]
name = "ocr_benchmarks"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[features]
default = ["compression"]

# Basic features
compression = ["dep:flate2"]

# Image processing features
external-images = ["dep:image"]

# OCR features
ocr-tesseract = ["dep:rusty-tesseract", "external-images"]
ocr-full = ["ocr-tesseract"]

# Performance features
performance = ["dep:rayon", "compression"]

# Test features
real-pdf-tests = []  # Enable tests with real PDF files from fixtures

# Semantic marking (Community level - basic tagging)
semantic = ["dep:serde_json"]

# Parallel processing features
rayon = ["dep:rayon"]
