[package]
name = "oxidize-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/oxidize-pdf"
homepage = "https://github.com/bzsanti/oxidizePdf"
description = "A pure Rust PDF generation and manipulation library with zero external dependencies"
keywords = ["pdf", "document", "generation", "parser", "graphics"]
categories = ["graphics", "text-processing", "parsing", "multimedia::images"]
readme = "../README.md"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
lazy_static = { workspace = true }

# Compression (optional)
flate2 = { workspace = true, optional = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }

# Logging
tracing = { workspace = true }

# Hashing
md5 = "0.8"
sha2 = "0.10"

# Unicode processing
unicode-normalization = "0.1"

# Text processing and validation
regex = "1.10"

# XML parsing for XMP metadata
quick-xml = { workspace = true }

# Random number generation (for examples)
rand = { version = "0.9", optional = true }

# Flags
bitflags = "2.4"

# Parallel processing
num_cpus = "1.16"
rayon = { version = "1.8", optional = true }

# (regex dependency moved to text processing section above)

# TOML parsing for ISO compliance matrix
toml = "0.9"

# Temporary files for external validation
tempfile = "3.8"
rusty-tesseract = { version = "1.1.10", optional = true }
image = { workspace = true, features = ["png", "jpeg"], optional = true }

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "handleapi", "winnt"] }

# Image processing dependencies (optional)
image = { workspace = true, optional = true }

# OCR dependencies (optional)
rusty-tesseract = { version = "1.1.10", optional = true }
# tesseract = { version = "0.15.2", optional = true, features = ["tesseract_5_2"] }
# leptonica-plumbing = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.7"
tempfile = "3.8"
serde_json = { workspace = true }

[[example]]
name = "font_spacing_test"
path = "../examples/src/font_spacing_test.rs"

[[example]]
name = "font_subsetting_test"
path = "../examples/src/font_subsetting_test.rs"

[[example]]
name = "field_actions"
path = "../examples/src/field_actions.rs"

[[example]]
name = "form_validation"
path = "../examples/src/form_validation.rs"

[[example]]
name = "generate_jpeg_test_fixture"
path = "../examples/src/generate_jpeg_test_fixture.rs"

[[example]]
name = "button_fields_demo"
path = "../examples/src/button_fields_demo.rs"

[[example]]
name = "calibrated_colors_demo"
path = "../examples/src/calibrated_colors_demo.rs"

[[example]]
name = "generate_compliance_report"
path = "../examples/src/generate_compliance_report.rs"

[[example]]
name = "parse_iso_spec"
path = "../examples/src/parse_iso_spec.rs"

[[example]]
name = "expand_iso_matrix"
path = "../examples/src/expand_iso_matrix.rs"

[[example]]
name = "compare_iso_matrices"
path = "../examples/src/compare_iso_matrices.rs"

[[example]]
name = "test_corrupt_pdf_issue47"
path = "../examples/src/test_corrupt_pdf_issue47.rs"

[[example]]
name = "test_cjk_fonts"
path = "../examples/src/test_cjk_fonts.rs"

[[example]]
name = "test_cjk_comprehensive"
path = "../examples/src/test_cjk_comprehensive.rs"

[[example]]
name = "test_cjk_preview_compatibility"
path = "../examples/src/test_cjk_preview_compatibility.rs"

[[example]]
name = "demo_issues_fixed"
path = "../examples/src/demo_issues_fixed.rs"

[[example]]
name = "advanced_tables_example"
path = "../examples/advanced_tables_example.rs"

[[example]]
name = "advanced_tables_landscape_example"
path = "../examples/advanced_tables_landscape_example.rs"

[[example]]
name = "advanced_tables_adjusted_example"
path = "../examples/advanced_tables_adjusted_example.rs"

[[example]]
name = "advanced_tables_truncated_example"
path = "../examples/advanced_tables_truncated_example.rs"

[[example]]
name = "charts_example"
path = "../examples/charts_example.rs"

[[example]]
name = "charts_coordinate_problem"
path = "../examples/charts_coordinate_problem.rs"

[[example]]
name = "charts_fixed_example"
path = "../examples/charts_fixed_example.rs"

[[example]]
name = "charts_text_alignment_test"
path = "../examples/charts_text_alignment_test.rs"

[[example]]
name = "charts_comprehensive_test"
path = "../examples/charts_comprehensive_test.rs"

[[example]]
name = "realistic_document_benchmark"
path = "../examples/src/realistic_document_benchmark.rs"

# Legacy trivial benchmark (deprecated - use realistic_document_benchmark)
[[example]]
name = "simple_document_benchmark"
path = "../examples/src/simple_document_benchmark.rs"

[[example]]
name = "test_row_alignment_fix"
path = "../examples/src/test_row_alignment_fix.rs"

[[example]]
name = "debug_flate_predictor"
path = "../examples/src/debug_flate_predictor.rs"

[[example]]
name = "analyze_decoded_stream"
path = "../examples/src/analyze_decoded_stream.rs"

[[example]]
name = "debug_xref_streams"
path = "../examples/src/debug_xref_streams.rs"

[[example]]
name = "analyze_failing_stream"
path = "../examples/src/analyze_failing_stream.rs"

[[example]]
name = "diagnose_xref_confusion"
path = "../examples/src/diagnose_xref_confusion.rs"

[[example]]
name = "debug_predictor_structure"
path = "../examples/src/debug_predictor_structure.rs"

[[example]]
name = "extract_page_14"
path = "../examples/src/extract_page_14.rs"

[[example]]
name = "extract_multiple_pages"
path = "../examples/src/extract_multiple_pages.rs"

# Temporarily disabled examples with compilation errors
# [[example]]
# name = "streaming_support"

# [[example]]
# name = "batch_processing"

# [[example]]
# name = "error_recovery"

# [[example]]
# name = "analyze_pdf_rendering"

# Temporarily disabled test file with compilation errors

[[example]]
name = "medium_complexity_benchmark"
path = "../examples/src/medium_complexity_benchmark.rs"

[[example]]
name = "high_complexity_benchmark"
path = "../examples/src/high_complexity_benchmark.rs"

[[example]]
name = "extreme_complexity_benchmark"
path = "../examples/src/extreme_complexity_benchmark.rs"

[[example]]
name = "tesseract_debug"
path = "../examples/src/tesseract_debug.rs"


[[example]]
name = "test_ocr_with_tesseract"
path = "../examples/src/test_ocr_with_tesseract.rs"
required-features = ["ocr-tesseract"]

[[example]]
name = "test_extract_text_issue47"
path = "../examples/src/test_extract_text_issue47.rs"

[[example]]
name = "test_parent_resources"
path = "../examples/src/test_parent_resources.rs"

[[example]]
name = "test_issue47_verification"
path = "../examples/src/test_issue47_verification.rs"

[[example]]
name = "debug_font_encoding"
path = "../examples/src/debug_font_encoding.rs"

[[example]]
name = "test_random_fixtures"
path = "../examples/src/test_random_fixtures.rs"

[[example]]
name = "test_random_fixtures_simple"
path = "../examples/src/test_random_fixtures_simple.rs"

[[example]]
name = "test_text_extraction_demo"
path = "../examples/src/test_text_extraction_demo.rs"

[[example]]
name = "test_random_fixtures_extraction"
path = "../examples/src/test_random_fixtures_extraction.rs"

[[example]]
name = "test_all_fixtures_extraction"
path = "../examples/src/test_all_fixtures_extraction.rs"

[[example]]
name = "test_error_fixes"
path = "../examples/src/test_error_fixes.rs"
required-features = ["rand"]

[[example]]
name = "transparency"
path = "../examples/src/transparency.rs"

[[example]]
name = "debug_transparency"
path = "../examples/src/debug_transparency.rs"

[[example]]
name = "convert_pdf_ocr"
path = "../examples/src/convert_pdf_ocr.rs"

[[example]]
name = "test_ocr_simple"
path = "../examples/src/test_ocr_simple.rs"

[[example]]
name = "extract_images_demo"
path = "../examples/src/extract_images_demo.rs"

[[example]]
name = "dashboard_sales_report"
path = "../examples/src/dashboard_sales_report.rs"

[[example]]
name = "dashboard_templates_demo"
path = "../examples/src/dashboard_templates_demo.rs"

[[example]]
name = "heatmap_simple_test"
path = "../examples/src/heatmap_simple_test.rs"

[[example]]
name = "pivot_table_simple_test"
path = "../examples/src/pivot_table_simple_test.rs"

[[example]]
name = "scatter_plot_simple_test"
path = "../examples/src/scatter_plot_simple_test.rs"

[[example]]
name = "treemap_simple_test"
path = "../examples/src/treemap_simple_test.rs"

[[example]]
name = "charts_dashboard_integration_test"
path = "../examples/src/charts_dashboard_integration_test.rs"

[[example]]
name = "line_chart_dashboard_test"
path = "../examples/src/line_chart_dashboard_test.rs"

# Removed test_confidential_ocr example - file deleted for cleanup

[[bench]]
name = "ocr_benchmarks"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "ai_chunking"
harness = false

[features]
default = ["compression", "ocr-tesseract"]

# Basic features
compression = ["dep:flate2"]

# Image processing features
external-images = ["dep:image"]

# OCR features
ocr-tesseract = ["dep:rusty-tesseract", "external-images"]
ocr-full = ["ocr-tesseract"]

# Performance features
performance = ["dep:rayon", "compression"]

# Test features
real-pdf-tests = []  # Enable tests with real PDF files from fixtures

# Semantic marking (Community level - basic tagging)
semantic = ["dep:serde_json"]

# Parallel processing features
rayon = ["dep:rayon"]

# Edition features (for licensing and fingerprinting)
pro = []  # Commercial PRO edition
enterprise = []  # Commercial Enterprise edition

[[example]]
name = "ai_ready_invoice"
path = "../examples/src/ai_ready_invoice.rs"

[[example]]
name = "ai_ready_contract"
path = "../examples/src/ai_ready_contract.rs"

[[example]]
name = "ai_ready_resume"
path = "../examples/src/ai_ready_resume.rs"

[[example]]
name = "basic_chunking"
path = "../examples/ai_pipelines/basic_chunking.rs"

[[example]]
name = "rag_pipeline"
path = "../examples/ai_pipelines/rag_pipeline.rs"

[[example]]
name = "validate_real_pdfs"
path = "../examples/validation/validate_real_pdfs.rs"

[[example]]
name = "xmp_metadata_demo"
path = "../examples/src/xmp_metadata_demo.rs"

[[example]]
name = "incremental_form_update"
path = "../examples/incremental_form_update.rs"

[[example]]
name = "incremental_page_replacement_manual"
path = "../examples/incremental_page_replacement_manual.rs"

[[example]]
name = "incremental_overlay_simple"
path = "../examples/incremental_overlay_simple.rs"

[[example]]
name = "incremental_overlay_working"
path = "../examples/incremental_overlay_working.rs"

[[example]]
name = "page_overlay_mvp"
path = "../examples/page_overlay_mvp.rs"

[[example]]
name = "page_overlay_with_content"
path = "../examples/page_overlay_with_content.rs"

[[example]]
name = "llm_export_formats"
path = "../examples/llm_export_formats.rs"
