[package]
name = "oxidize-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/oxidize-pdf"
homepage = "https://github.com/bzsanti/oxidizePdf"
description = "A pure Rust PDF generation and manipulation library with zero external dependencies"
keywords = ["pdf", "document", "generation", "parser", "graphics"]
categories = ["graphics", "text-processing", "parsing", "multimedia::images"]
readme = "../README.md"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
lazy_static = { workspace = true }

# Compression (optional)
flate2 = { workspace = true, optional = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }

# Logging
tracing = { workspace = true }

# Hashing
md5 = "0.8"
sha2 = "0.10"

# AES encryption (production-grade for R5/R6)
aes = "0.8"
cbc = "0.1"
cipher = "0.4"

# Cryptographic security primitives
subtle = "2.6"                                # Constant-time comparison (prevents timing attacks)
zeroize = { version = "1.8", features = ["derive"] }  # Secure memory clearing (prevents memory dumps)

# Unicode processing
unicode-normalization = "0.1"

# Text processing and validation
regex = "1.10"

# XML parsing for XMP metadata
quick-xml = { workspace = true }

# Random number generation
# Required for encryption (salt generation), optional feature enables additional rand-based examples
rand = "0.9"

# Flags
bitflags = "2.4"

# Parallel processing
num_cpus = "1.16"
rayon = { version = "1.8", optional = true }

# (regex dependency moved to text processing section above)

# TOML parsing for ISO compliance matrix
toml = "0.9"

# Temporary files for external validation
tempfile = "3.8"
rusty-tesseract = { version = "1.1.10", optional = true }
image = { workspace = true, features = ["png", "jpeg"], optional = true }

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "handleapi", "winnt"] }

# Image processing dependencies (optional)
image = { workspace = true, optional = true }

# OCR dependencies (optional)
rusty-tesseract = { version = "1.1.10", optional = true }
# tesseract = { version = "0.15.2", optional = true, features = ["tesseract_5_2"] }
# leptonica-plumbing = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.7"
tempfile = "3.8"
serde_json = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
tracing-subscriber = { workspace = true }

[[example]]
name = "font_spacing_test"
path = "examples/font_spacing_test.rs"

[[example]]
name = "font_subsetting_test"
path = "examples/font_subsetting_test.rs"

[[example]]
name = "field_actions"
path = "examples/field_actions.rs"

[[example]]
name = "form_validation"
path = "examples/form_validation.rs"

[[example]]
name = "generate_jpeg_test_fixture"
path = "examples/generate_jpeg_test_fixture.rs"

[[example]]
name = "button_fields_demo"
path = "examples/button_fields_demo.rs"

[[example]]
name = "calibrated_colors_demo"
path = "examples/calibrated_colors_demo.rs"

[[example]]
name = "generate_compliance_report"
path = "examples/generate_compliance_report.rs"

[[example]]
name = "parse_iso_spec"
path = "examples/parse_iso_spec.rs"

[[example]]
name = "expand_iso_matrix"
path = "examples/expand_iso_matrix.rs"

[[example]]
name = "compare_iso_matrices"
path = "examples/compare_iso_matrices.rs"

[[example]]
name = "test_corrupt_pdf_issue47"
path = "examples/test_corrupt_pdf_issue47.rs"

[[example]]
name = "test_cjk_fonts"
path = "examples/test_cjk_fonts.rs"

[[example]]
name = "test_cjk_comprehensive"
path = "examples/test_cjk_comprehensive.rs"

[[example]]
name = "test_cjk_preview_compatibility"
path = "examples/test_cjk_preview_compatibility.rs"

[[example]]
name = "demo_issues_fixed"
path = "examples/demo_issues_fixed.rs"

[[example]]
name = "advanced_tables_example"
path = "examples/advanced_tables_example.rs"

[[example]]
name = "advanced_tables_landscape_example"
path = "examples/advanced_tables_landscape_example.rs"

[[example]]
name = "advanced_tables_adjusted_example"
path = "examples/advanced_tables_adjusted_example.rs"

[[example]]
name = "advanced_tables_truncated_example"
path = "examples/advanced_tables_truncated_example.rs"

[[example]]
name = "charts_example"
path = "examples/charts_example.rs"

[[example]]
name = "charts_coordinate_problem"
path = "examples/charts_coordinate_problem.rs"

[[example]]
name = "charts_fixed_example"
path = "examples/charts_fixed_example.rs"

[[example]]
name = "charts_text_alignment_test"
path = "examples/charts_text_alignment_test.rs"

[[example]]
name = "charts_comprehensive_test"
path = "examples/charts_comprehensive_test.rs"

[[example]]
name = "realistic_document_benchmark"
path = "examples/realistic_document_benchmark.rs"

# Legacy trivial benchmark (deprecated - use realistic_document_benchmark)
[[example]]
name = "simple_document_benchmark"
path = "examples/simple_document_benchmark.rs"

[[example]]
name = "test_row_alignment_fix"
path = "examples/test_row_alignment_fix.rs"

[[example]]
name = "debug_flate_predictor"
path = "examples/debug_flate_predictor.rs"

[[example]]
name = "analyze_decoded_stream"
path = "examples/analyze_decoded_stream.rs"

[[example]]
name = "analyze_failing_stream"
path = "examples/analyze_failing_stream.rs"

[[example]]
name = "debug_predictor_structure"
path = "examples/debug_predictor_structure.rs"

[[example]]
name = "extract_page_14"
path = "examples/extract_page_14.rs"

[[example]]
name = "extract_multiple_pages"
path = "examples/extract_multiple_pages.rs"

# Batch processing example
[[example]]
name = "batch_processing"
path = "examples/batch_processing.rs"
required-features = ["rayon"]

# Temporarily disabled examples with compilation errors
# [[example]]
# name = "streaming_support"

# [[example]]
# name = "error_recovery"

# [[example]]
# name = "analyze_pdf_rendering"

# Temporarily disabled test file with compilation errors

[[example]]
name = "medium_complexity_benchmark"
path = "examples/medium_complexity_benchmark.rs"

[[example]]
name = "high_complexity_benchmark"
path = "examples/high_complexity_benchmark.rs"

[[example]]
name = "extreme_complexity_benchmark"
path = "examples/extreme_complexity_benchmark.rs"

[[example]]
name = "tesseract_debug"
path = "examples/tesseract_debug.rs"


[[example]]
name = "test_ocr_with_tesseract"
path = "examples/test_ocr_with_tesseract.rs"
required-features = ["ocr-tesseract"]

[[example]]
name = "test_extract_text_issue47"
path = "examples/test_extract_text_issue47.rs"

[[example]]
name = "test_parent_resources"
path = "examples/test_parent_resources.rs"

[[example]]
name = "test_issue47_verification"
path = "examples/test_issue47_verification.rs"

[[example]]
name = "debug_font_encoding"
path = "examples/debug_font_encoding.rs"

[[example]]
name = "test_random_fixtures"
path = "examples/test_random_fixtures.rs"

[[example]]
name = "test_random_fixtures_simple"
path = "examples/test_random_fixtures_simple.rs"

[[example]]
name = "test_text_extraction_demo"
path = "examples/test_text_extraction_demo.rs"

[[example]]
name = "test_random_fixtures_extraction"
path = "examples/test_random_fixtures_extraction.rs"

[[example]]
name = "test_all_fixtures_extraction"
path = "examples/test_all_fixtures_extraction.rs"

[[example]]
name = "test_error_fixes"
path = "examples/test_error_fixes.rs"

[[example]]
name = "transparency"
path = "examples/transparency.rs"

[[example]]
name = "debug_transparency"
path = "examples/debug_transparency.rs"

[[example]]
name = "convert_pdf_ocr"
path = "examples/convert_pdf_ocr.rs"

[[example]]
name = "test_ocr_simple"
path = "examples/test_ocr_simple.rs"

[[example]]
name = "extract_images_demo"
path = "examples/extract_images_demo.rs"

[[example]]
name = "dashboard_sales_report"
path = "examples/dashboard_sales_report.rs"

[[example]]
name = "dashboard_templates_demo"
path = "examples/dashboard_templates_demo.rs"

[[example]]
name = "heatmap_simple_test"
path = "examples/heatmap_simple_test.rs"

[[example]]
name = "pivot_table_simple_test"
path = "examples/pivot_table_simple_test.rs"

[[example]]
name = "scatter_plot_simple_test"
path = "examples/scatter_plot_simple_test.rs"

[[example]]
name = "treemap_simple_test"
path = "examples/treemap_simple_test.rs"

[[example]]
name = "charts_dashboard_integration_test"
path = "examples/charts_dashboard_integration_test.rs"

[[example]]
name = "line_chart_dashboard_test"
path = "examples/line_chart_dashboard_test.rs"

# Removed test_confidential_ocr example - file deleted for cleanup

# Benchmarks temporarily disabled - need API updates for v1.6.4
# [[bench]]
# name = "ocr_benchmarks"
# harness = false
#
# [[bench]]
# name = "performance_benchmarks"
# harness = false
#
# [[bench]]
# name = "ai_chunking"
# harness = false
#
# [[bench]]
# name = "plaintext_benchmark"
# harness = false
#
# [[bench]]
# name = "parsing_benchmark"
# harness = false
#
# [[bench]]
# name = "image_extraction_benchmark"
# harness = false
#
# [[bench]]
# name = "batch_processing_benchmark"
# harness = false
#
# [[bench]]
# name = "marked_content_benchmark"
# harness = false

[features]
default = ["compression", "ocr-tesseract"]

# Basic features
compression = ["dep:flate2"]

# Debug features
verbose-debug = []  # Enable verbose debug logging (disabled by default for zero runtime cost)

# Image processing features
external-images = ["dep:image"]

# OCR features
ocr-tesseract = ["dep:rusty-tesseract", "external-images"]
ocr-full = ["ocr-tesseract"]

# Performance features
performance = ["dep:rayon", "compression"]

# Test features
real-pdf-tests = []  # Enable tests with real PDF files from fixtures

# Semantic marking (Community level - basic tagging)
semantic = ["dep:serde_json"]

# Parallel processing features
rayon = ["dep:rayon"]

# Edition features (for licensing and fingerprinting)
pro = []  # Commercial PRO edition
enterprise = []  # Commercial Enterprise edition

[[example]]
name = "ai_ready_invoice"
path = "examples/ai_ready_invoice.rs"

[[example]]
name = "ai_ready_contract"
path = "examples/ai_ready_contract.rs"

[[example]]
name = "ai_ready_resume"
path = "examples/ai_ready_resume.rs"

[[example]]
name = "xmp_metadata_demo"
path = "examples/xmp_metadata_demo.rs"

[[example]]
name = "incremental_form_update"
path = "examples/incremental_form_update.rs"

[[example]]
name = "incremental_page_replacement_manual"
path = "examples/incremental_page_replacement_manual.rs"

[[example]]
name = "incremental_overlay_simple"
path = "examples/incremental_overlay_simple.rs"

[[example]]
name = "incremental_overlay_working"
path = "examples/incremental_overlay_working.rs"

[[example]]
name = "page_overlay_mvp"
path = "examples/page_overlay_mvp.rs"

[[example]]
name = "page_overlay_with_content"
path = "examples/page_overlay_with_content.rs"

[[example]]
name = "llm_export_formats"
path = "examples/llm_export_formats.rs"

[[example]]
name = "pdf_to_llm_formats"
path = "examples/pdf_to_llm_formats.rs"

# Disabled - API incompatibility (deferred to v1.6.4)
# [[example]]
# name = "invoice_extraction_basic"
# path = "../examples/invoice_extraction_basic.rs"

# [[example]]
# name = "invoice_extraction_advanced"
# path = "../examples/invoice_extraction_advanced.rs"

[[example]]
name = "keyvalue_extraction"
path = "examples/keyvalue_extraction.rs"

[[example]]
name = "table_extraction"
path = "examples/table_extraction.rs"

[[example]]
name = "tagged_pdf_demo"
path = "examples/tagged_pdf_demo.rs"

# Disabled - requires benchmark framework
# [[example]]
# name = "plaintext_benchmark"
# path = "../benches/plaintext_benchmark.rs"
