[package]
name = "pipeline-profiler"
version = "0.1.0"
edition = "2021"
publish = false
description = "Pipeline profiler for oxidize-pdf — measures timing per stage across a corpus"

[dependencies]
oxidize-pdf = { path = "../../oxidize-pdf-core" }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
