[workspace]
# Empty workspace table to exclude from parent workspace

[package]
name = "oxidize-pdf-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
oxidize-pdf = { path = "../../oxidize-pdf-core" }
lopdf = "0.34"
printpdf = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }

[[bench]]
name = "rust_pdf_comparison"
harness = false

[features]
default = []